@@ -6,6 +6,8 @@ from django.contrib.auth.models import (
     AbstractBaseUser, BaseUserManager, Group, Permission, PermissionsMixin)
 from django.db import models
 
+from .fields import ConvertedValueField
+
 
 class CustomUserManager(BaseUserManager):
     def _create_user(self, username, email, password,
@@ -33,7 +35,7 @@ class CustomUserManager(BaseUserManager):
 
 
 class CustomUser(AbstractBaseUser, PermissionsMixin):
-    identifier = models.AutoField(primary_key=True)
+    identifier = ConvertedValueField(primary_key=True)
     username = models.CharField(max_length=100, unique=True)
     email = models.EmailField(max_length=255, blank=True)
     is_staff = models.BooleanField(default=True)
